--- a/pages/delivery/delivery.wxml
+++ b/pages/delivery/delivery.wxml
@@ -1,15 +1,49 @@
 <!--pages/delivery/delivery.wxml-->
 <view class="box_del">
   <!--文本框-->
+  <!--标题确定-->
   <view class="text_body">
-<textarea class="textfont" placeholder="输入你想发布的内容" ></textarea>
+    <view class="page-section">
+    <view class="weui-cells__title">标题</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input"  maxlength="30" bindinput="titleInput" placeholder="请输入标题"/>
+      </view>
+    </view>
   </view>
+  </view>
+
+    <!--类型确定-->
+<view class="section">
+    <view class="sectiontitle">类型</view>
+    <picker bindchange="tagChange" value="{{index}}" range="{{array}}">
+        <view class="picker">
+            点击切换类型  当前选择: {{array[index]}}
+        </view>
+    </picker>
+</view>
+
+  <!--时间确定-->
+  <view class="text_body">
+    <view class="page-section">
+    <view class="weui-cells__title">时间</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input"  maxlength="30" bindinput="timeInput" placeholder="请输入时间"/>
+      </view>
+    </view>
+  </view>
+</view>
+
+
+  <view class="sectiontitle">详细说明</view>
+    <textarea class="textfont" placeholder="具体内容，要求，酬劳等" bindinput="contextInput"></textarea>
+
+    <button  bindtap="pub"> 发布 </button>
+
+
   <!--照片上传-->
 <view></view>
-<!--类型确定-->
-<view></view>
-<!--时间确定-->
-<view></view>
-<!--赏金-->
-<view></view>
+
+
 </view>
